# Waluty

./: README.md
CurrenciesData/: chf.csv  eur.csv  jpy.csv  usd.csv
Data/currencies/: chf.csv  eur.csv  gbp.csv  jpy.csv  minimalPension.csv  rub.csv  usd.csv
Data/currencies/Currencies2004-7/: chf.csv  eur.csv  gbp.csv  jpy.csv  rub.csv  usd.csv
Data/currencies/Currencies2014/: chf.csv  eur.csv  gbp.csv  jpy.csv  rub.csv  usd.csv
Data/currencies/Currencies2016.2018/: usd201617.csv  usd201819.csv
Data/currencies/Currencies2022/: chf.csv  eur.csv  gbp.csv  jpy.csv  rub.csv  usd.csv
Data/inflation/: deu.csv  gbr.csv  jpn.csv  pol.csv  polfrom1990.csv  rus.csv  usa.csv
backend/: Dockerfile  config.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/graphs/: __init__.py  routes.py
backend/app/main/: routes.py
backend/app/services/: graphs.py
backend/app/templates/: index.html
backend/app/utils/: api_utils.py  data.py  get_data_from_csv.py  nbp_api_utils.py
frontend/: package.json  tailwind.config.js
frontend/app/: NavItem.tsx  Navigation.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/analysis/: page.tsx
frontend/app/graphs/: layout.tsx  page.tsx
frontend/app/inflation/: page.tsx
frontend/components/: CustomBulletList.tsx  CustomDialog.tsx  CustomDisclosure.tsx  CustomPlot.tsx  CustomSwiper.tsx  Graph.tsx  Loading.tsx  LoadingSkeleton.tsx
frontend/src/: App.tsx
frontend/styles/: BulletList.module.css  homepage.module.css  loadingGraph.module.css
frontend/utils/: api.ts
(+7 files in other folders)
