[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Piotr Dros <piotr.dros01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
plotly = "^5.14.1"
flask-cors = "^3.0.10"
requests = "^2.31.0"
pandas = "^2.0.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
